Shang New Live/src/objects/POS_Daily_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Lease__r.Tenant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Charge</label>
        <referenceTo>Charge_Master__c</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lease_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Unit</label>
        <referenceTo>Lease_Unit__c</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease</label>
        <referenceTo>Lease__c</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Items_Purchased__c</fullName>
        <label>No. of Items Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POS_No__c</fullName>
        <label>POS No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Code</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>POS_Daily_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Bill_Amount__c</fullName>
        <label>Total Bill Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_Time__c</fullName>
        <label>Transaction Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_No__c</fullName>
        <label>Transaction No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>POS Daily Transaction</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Daily Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>